# auto-1783

./: .bazelrc  README.md  WORKSPACE.bazel  maven_install.json
java/test/: BUILD.bazel  MyBinary.java  MyLibrary.java
toolchains/: BUILD.bazel
turbine/: BUILD.bazel  reflection-config.json  resource-config.json
